# NetworkSecurity

./: .gitignore  Dockerfile  app.py  main.py  mlflow.db  push_data.py  pyproject.toml
.github/workflows/: ci.yml
final_models/: preprocessor.pkl
networksecurity/cloud/: s3_syncer.py
networksecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
networksecurity/constant/training_pipeline/: __init__.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/logging/: logger.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/utils/main_utils/: utils.py
networksecurity/utils/ml_utils/metric/: classification_metric.py
networksecurity/utils/ml_utils/model/: estimator.py
templates/: table.html
