[project]
name = "networksecurity"
version = "0.1.0"
description = "Network security analysis project"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn>=0.13.2",
    "pymongo[srv]==3.12",
    "dotenv>=0.9.9",
    "certifi>=2025.11.12",
]

[project.scripts]
networksecurity = "networksecurity.main:main"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["networksecurity"]


